--- a/resume/style.css
+++ b/resume/style.css
@@ -268,7 +268,7 @@ strong {
     height: 100%;
     left: 0;
     top: 0;
-    background: url("./cv.jpg") no-repeat center;
+    background: url("./cv2.jpg") no-repeat center;
     background-origin: content-box;
     background-size: cover;
     z-index: 2;
