--- a/resume/style.css
+++ b/resume/style.css
@@ -223,7 +223,7 @@ h1, h2, h3, h4, p {
         align-items: center;
     }
     .charts {
-        width: 500px;
+        width: 100%;
         height: 240px;
         position: relative;
     }
