--- a/resume/style.css
+++ b/resume/style.css
@@ -9,22 +9,9 @@ html {
 
 a {
     color: #3498db;
+    text-decoration-line: none;
 }
 
-@media print {
-    html {
-        padding: 0;
-        background: #f7f7f7;
-    }
-    body {
-        height: 59.4cm;
-    }
-
-    .skills {
-        padding-top: 2rem;
-        page-break-before: always;
-    }
-}
 
 body {
     width: 21cm;
@@ -55,14 +42,6 @@ body::after {
     border-radius: 8px 8px 0 0;
 }
 
-.icon {
-    width: 1em;
-    height: 1em;
-    vertical-align: -0.15em;
-    padding-right: .5em;
-    fill: currentColor;
-    overflow: hidden;
-}
 
 h1 {
     font-size: 20px;
@@ -84,6 +63,15 @@ h4, p, div {
 
 html {
     font-size: 14px;
+}
+
+.icon {
+    width: 1em;
+    height: 1em;
+    vertical-align: -0.15em;
+    padding-right: .5em;
+    fill: currentColor;
+    overflow: hidden;
 }
 
 .banner {
@@ -170,18 +158,6 @@ section > div {
     width: 245px;
 }
 
-span.left {
-    font-size: 14px;
-    float: right;
-    opacity: .4;
-}
-
-.charts {
-    width: 540px;
-    height: 220px;
-    position: relative;
-    left: -10px;
-}
 
 h1, h2, h3, h4, p {
     margin: .5rem 0;
@@ -190,58 +166,6 @@ h1, h2, h3, h4, p {
 
 .mobile {display: none}
 
-.skills__wrapper {
-    display: flex;
-    align-items: center;
-}
-@media screen and (max-width: 800px) {
-    h1, h2, h3, h4, p {
-        margin: .5rem 0;
-        line-height: 1.7;
-    }
-    html {
-        padding: 0;
-    }
-
-    body {
-        width: 100%;
-    }
-
-    span.left {
-        display: block;
-        float: none;
-        font-size: 12px;
-    }
-
-    .pc {
-        display: none;
-    }
-    .mobile {
-        display: flex;
-        flex-wrap: wrap;
-        flex: 1;
-    }
-    .mobile span {
-        white-space: nowrap;
-    }
-
-    .skills__wrapper {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .charts {
-        width: 100%;
-        height: 240px;
-        position: relative;
-    }
-
-}
-
-strong {
-    color: #e67e22;
-    font-weight: normal;
-}
 
 .avatar {
     margin-left: 1rem;
@@ -279,9 +203,58 @@ strong {
     z-index: 2;
 }
 
-code {
-    background-color: rgba(0, 0, 0, .05);
-    padding: .2rem;
-    border-radius: .3rem;
-    margin: 0 .2rem;
+
+span.right {
+    float: right;
+    font-size: .5em;
+    color: rgba(0, 0, 0, .4);
+}
+
+@media print {
+    html {
+        padding: 0;
+        background: #f7f7f7;
+    }
+    body {
+        height: 59.4cm;
+    }
+
+    .print-break-before {
+        padding-top: 2rem;
+        page-break-before: always;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    h1, h2, h3, h4, p {
+        margin: .5rem 0;
+        line-height: 1.7;
+    }
+    html {
+        padding: 0;
+    }
+
+    body {
+        width: 100%;
+    }
+
+    span.right {
+        display: block;
+        float: none;
+        color: rgba(0, 0, 0, .4);
+        font-size: .5em;
+    }
+
+    .pc {
+        display: none;
+    }
+    .mobile {
+        display: flex;
+        flex-wrap: wrap;
+        flex: 1;
+    }
+    .mobile span {
+        white-space: nowrap;
+    }
+
 }
